@@ -14,6 +14,9 @@ NEXT
 The $mech->clone() method was not passing the cookie jar to its
 clone properly.  Thanks to David Sainty.
 
+The $mech->back() can fail if there's nothing on the stack to go
+back to.  Thanks to Dave Page.
+
 
 1.51_02     Tue Nov 18 01:30:54 CST 2008
 ========================================
